force-app/main/default/objects/Channel_Partner__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Channel_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>