force-app/main/default/objects/Channel_Partner__c/fields/CP_Type__c.field-meta.xml
<CustomField>
    <fullName>CP_Type__c</fullName>
    <label>CP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Firm</fullName>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
            <value>
                <fullName>Proprietorship Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>