force-app/main/default/objects/Channel_Partner__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <label>GST No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>