force-app/main/default/objects/Channel_Partner__c/fields/Location_Zone__c.field-meta.xml
<CustomField>
    <fullName>Location_Zone__c</fullName>
    <label>Location Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>