force-app/main/default/objects/Channel_Partner__c/fields/Name_Contact_Person1__c.field-meta.xml
<CustomField>
    <fullName>Name_Contact_Person1__c</fullName>
    <label>Name Of Contact Person 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>