force-app/main/default/objects/Channel_Partner__c/fields/Name_Contact_Person2__c.field-meta.xml
<CustomField>
    <fullName>Name_Contact_Person2__c</fullName>
    <label>Name Of Contact Person 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>