force-app/main/default/objects/Channel_Partner__c/fields/Pan_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_No__c</fullName>
    <label>Pan Card No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>