force-app/main/default/objects/Channel_Partner__c/fields/Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>Registration_Code__c</fullName>
    <label>Registration Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>