force-app/main/default/objects/Channel_Partner__c/fields/RERA_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>RERA_Registration_No__c</fullName>
    <label>RERA Registration No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>