force-app/main/default/objects/Channel_Partner__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>