force-app/main/default/objects/Channel_Partner__c/validationRules/Mobile_Number_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_10_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN( Mobile_No__c ) &gt; 10 , LEN( Mobile_No__c ) &lt; 10)</errorConditionFormula>
    <errorDisplayField>Mobile_No__c</errorDisplayField>
    <errorMessage>Mobile number can not be more or less than 10 digits.</errorMessage>
</ValidationRule>